# test-llama

FlightAssistance/: pyproject.toml
FlightAssistance/flightassistancebot/notebooks/: 10_get_flight_data.ipynb  20_generate_flight_data.ipynb  30_generate_flight.ipynb  40_genetrate_flight_data.ipynb
FlightAssistance/flightassistancebot/test-llama/backend/: Dockerfile  pyproject.toml
FlightAssistance/flightassistancebot/test-llama/backend/chroma/: chroma.sqlite3
FlightAssistance/flightassistancebot/test-llama/frontend/: Dockerfile  package-lock.json  package.json
