[tool.poetry]
name = "flightassistance"
version = "0.1.0"
description = "directory for my personal project"
authors = ["Uwa Joseph"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
litellm = "^1.48.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
